--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,30 @@
 <html>
+    <head>
+        <title>
+            Article one made by Sarvani
+        </title>
+    </head>
+    <body>
+        <div>
+           <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article one
+        </h3>
+        <div>
+            Sept 5
+        </div>
+        <div>
+            <p>
+                hi this is sarvanihi this is sarvani hi this is sarvani hi this is sarvani
+            </p>
+            <p>
+                hi this is sarvani hi this is sarvani hi this is sarvani
+            </p>
+            <p>
+                h hi this is sarvanii this is sarvani hi this is sarvani
+            </p>
+        </div>
+    </body>
 </html>
