--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,9 +4,11 @@
             Article one made by Sarvani
         </title>
         <meta name="viewport" content="width-device width, initial-scale=1" />
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
+    
     <body>
-        <div>
+        <div class="container" >
            <a href="/">Home</a>
         </div>
         <hr/>
