--- a/ui/index.html
+++ b/ui/index.html
@@ -5,12 +5,15 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img id=madi src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id-'main-text' class="center text-big bold">
             Hi! I am sarvani,this is my firt webapp.
         </div>
+        <script>
+           alert( 'hi i\'m javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
