--- a/ui/index.html
+++ b/ui/index.html
@@ -4,16 +4,19 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
-            <img id=madi src="/ui/madi.png" class="img-medium"/>
+            <img id=madi src="http://pngimg.com/upload/butterfly_PNG1066.png" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id-'main-text' class="center text-big bold">
+        <h3> My Data </h3>
+        <br>
+        <div>
             Hi! I am sarvani,this is my firt webapp.
         </div>
-        <script>
-           alert( 'hi i\'m javascript');
-        </script>
+            </div>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
