[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
         <h3> My Data </h3>
         <br>
         <div>
-            Hi! I am sarvani,this is my firt webapp.
+            Hi! I am sarvani,this is my first webapp.
             ........!!!!!
         </div>
             </div>
