--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
         <br>
         <h3> My Data </h3>
         <br>
-        <div>
+        <div id="main-text" >
             Hi! I am sarvani,this is my first webapp.
             ........!!!!!
         </div>
