[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,7 @@
         <div id="main-text" >
             Hi! I am sarvani,this is my first webapp.
             ........!!!!!
+            <button onclick = "stopmovement()" > Stop Movement </button>
         </div>
             </div>
         
