[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,8 @@
         
         <script type="text/javascript" src="/ui/main.js">
           </script>
-        
+        <div>
          <button onclick = "stopmovement()" > Stop Movement </button>
+         </div>
     </body>
 </html>
