[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,6 +20,7 @@
             </div>
         
         <script type="text/javascript" src="/ui/main.js">
+        var marginLeft=0;
           function moveRight(){
     marginLeft=marginLeft+1;
     img.style.marginLeft=marginLeft+'px';
