--- a/ui/index.html
+++ b/ui/index.html
@@ -4,9 +4,13 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div>
+            Hey! CLick On Me!
+            Lets have a Ride....
+        </div>
         <div class="container">
         <div class="center">
-            <img id=madi src="http://pngimg.com/upload/butterfly_PNG1066.png" class="img-medium"/>
+            <img id=madi src="chevrolet-india-segment-cars-spark.jpg" class="img-medium"/>
         </div>
         <hr/>
         <br>
