--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         </div>
         <div class="container">
         <div class="center">
-            <img id=madi src="chevrolet-india-segment-cars-spark.jpg" class="img-medium"/>
+            <img id=madi src="http://pngimg.com/upload/audi_PNG1759.png" class="img-medium"/>
         </div>
         <hr/>
         <br>
