--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div>
+        <div class="centerTop" >
             Hey! CLick On Me!
             Lets have a Ride....
         </div>
