--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
             Lets have a Ride....
         </div>
         <div class="container">
-        <div class="center">
+        <div>
             <img id=madi src="http://pngimg.com/upload/audi_PNG1759.png" class="img-medium"/>
         </div>
         <hr/>
