[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div class="head">
-            Hey! CLick On Me!
-            Lets have a Ride....
+            Hey! CLick On The Car!
+            To have a Ride....
         </div>
         <div class="container">
         <div>
