--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title> Lifestyle Store </title>
 	
-		<link href="../css/index.css" rel="stylesheet" type="text/css"/>
+		<link href="/index.css" rel="stylesheet" type="text/css"/>
 		
 </head>
 <body>
