[imad-console] Updates index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="container">
 			<div class="items">
 			 <a href="#">
-				<img src="../img/watch.jpg" alt="watches" class="thumbnail" >
+				<img src="http://en.wikialpha.org/mediawiki/images/thumb/9/9a/Casio_F-91W.jpg/300px-Casio_F-91W.jpg" alt="watches" class="thumbnail" >
 					<div class="caption">
 						<h2> Watches </h2>
 						<p>“Original watches from the best brands.”</p>
@@ -41,7 +41,7 @@
 			</div>
 			<div class="items">
 			 <a href="#">
-				<img src="../img/camera.jpg" alt="Cameras"class="thumbnail">
+				<img src="http://i.ebayimg.com/00/s/NTAwWDUwMA==/z/vogAAOxy4YdTVmbz/$_35.JPG?set_id=2" alt="Cameras" class="thumbnail">
 					<div class="caption">
 						<h2> Cameras </h2>
 						<p>“Choose among the best available in the world.”</p>
@@ -50,7 +50,7 @@
 			</div>
 			<div class="items">
 			 <a href="#">
-				<img src="../img/Shirts.jpg" alt="Shirts"width="300px" height="300px" class="thumbnail">
+				<img src="http://thumbs4.ebaystatic.com/d/l225/pict/321075255295_2.jpg" alt="Shirts" width="300px" height="300px" class="thumbnail">
 					<div class="caption">
 						<h2> Shirts </h2>
 						<p>"Our exquisite collection of shirts are here.”</p>
