--- a/index1.html
+++ b/index1.html
@@ -22,8 +22,8 @@
 		<div class="collapse navbar-collapse" id="myNavbar">
 		<ul class="nav navbar-nav navbar-right">
 		
-		 <li> <a href="signup.php"><span class="glyphicon glyphicon-user"/>Signup </a></li>
-		 <li> <a href="login.php"><span class="glyphicon glyphicon-log-in"/>Login </a></li>
+		 <li> <a href="/signup.php"><span class="glyphicon glyphicon-user"/>Signup </a></li>
+		 <li> <a href="/login.php"><span class="glyphicon glyphicon-log-in"/>Login </a></li>
 		 
 		</ul>
 		 </div>
